syntax = "proto3";

package wsnet;
option go_package = "wsnetpb";

message ConnectionInit {}

message ConnectionClose {}

message Request {
    // token is the identifier for the referred connection
    bytes token = 1;
    oneof msg {
        ConnectionInit connection_init = 2;
        ConnectionClose connection_close = 3;
        bytes connection_data = 4;
    }
}

message Response {
    // token is the identifier for the referred connection
    bytes token = 1;
    oneof msg {
        ConnectionClose connection_close = 2;
        bytes connection_data = 3;
    }
}